Update links to publications

--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
                             <b>[J2]</b> D. Di Nucci, F. Palomba, R. Oliveto, A. De Lucia.<br/>
                             Dynamic Selection of Classifiers in Bug Prediction: an Adaptive Method.<br/>
                             IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI), 2017, Volume 1 Issue 3, 11 pages, 202-212.
-                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:hC7cP41nSMkC" target="blank">[pdf]</a>
+                            <a href="https://www.researchgate.net/publication/317264985_Dynamic_Selection_of_Classifiers_in_Bug_Prediction_An_Adaptive_Method?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A317264985&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -67,7 +67,7 @@
                             <b>[J1]</b> D. Di Nucci, F. Palomba, G. De Rosa, G. Bavota, R. Oliveto, A. De Lucia.<br/>
                             A Developer Centered Bug Prediction Model.<br/>
                             IEEE Transactions on Software Engineering (TSE), 2017, 21 pages, to appear.
-                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:IWHjjKOFINEC" target="blank">[pdf]</a>
+                            <a href="https://www.researchgate.net/publication/312962994_A_Developer_Centered_Bug_Prediction_Model?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A312962994&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             PETrA: a Software-Based Tool for Estimating the Energy Profile of Android Applications.<br/>
                            In Proceedings of the 39th International Conference on Software Engineering (ICSE 2017) - Demonstration Track,
                            Buenos Aires, Argentina, 2017, 4 pages, 3-6.
-                           <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:qUcmZB5y_30C" target="blank">[pdf]</a>
+                           <a href="https://www.researchgate.net/publication/313847144_PETrA_A_Software-Based_Tool_for_Estimating_the_Energy_Profile_of_Android_Applications?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A313847144&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -88,7 +88,7 @@
                             Lightweight Detection of Android-specific Code Smells: the aDoctor Project.<br/>
                            In Proceedings of the 24th IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER 2017) - Tool Track,
                            Klagenfurt, Austria, 2017, 5 pages, 487-491.
-                           <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:L8Ckcad2t8MC" target="blank">[pdf]</a>
+                           <a href="https://www.researchgate.net/publication/313847048_Lightweight_Detection_of_Android-specific_Code_Smells_the_aDoctor_Project?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A313847048&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -97,7 +97,7 @@
                             Software-Based Energy Profiling of Android Apps: Simple, Efficient and Reliable?<br/>
                            In Proceedings of the 24th IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER 2017),
                            Klagenfurt, Austria, 2017, 12 pages, 103-114.
-                           <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:ZeXyd9-uunAC" target="blank">[pdf]</a>
+                           <a href="https://www.researchgate.net/publication/313846859_Software-Based_Energy_Profiling_of_Android_Apps_Simple_Efficient_and_Reliable?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A313846859&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -106,7 +106,7 @@
                             Search-based Testing of Procedural Programs: Iterative Single-Target or Multi-Target Approach?<br/>
                            In Proceedings of the Symposium on Search-Based Software Engineering (SSBSE 2016),
                            Raleigh, NC, United States, 2016, 15 pages, 64-79.
-                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:dhFuZR0502QC" target="blank">[pdf]</a>
+                            <a href="https://www.researchgate.net/publication/308544812_Search-Based_Testing_of_Procedural_Programs_Iterative_Single-Target_or_Multi-target_Approach?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A308544812&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -115,7 +115,7 @@
                             On the Diffusion of Test Smells in Automatically Generated Test Code: An Empirical Study.<br/>
                             In Proceedings of the 9th International Workshop on Search-Based Software Testing (SBST 2016),
                             Austin, TX, United States, 2016, 10 pages, 5-14.
-                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:QIV2ME_5wuYC" target="blank">[pdf]</a>
+                            <a href="https://www.researchgate.net/publication/296183385_On_the_Diffusion_of_Test_Smells_in_Automatically_Generated_Test_Code_An_Empirical_Study?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A296183385&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -124,7 +124,7 @@
                             On the Role of Developer’s Scattered Changes in Bug Prediction.<br/>
                             In Proceedings of the 31st International Conference on Software Maintenance and Evolution (ICSME 2015),
                             Bremen, Germany, 2015, 10 pages, 241-250.
-                            <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:M3ejUd6NZC8C" target="blank">[pdf]</a>
+                            <a href="https://www.researchgate.net/publication/281033540_On_the_Role_of_Developer%27s_Scattered_Changes_in_Bug_Prediction?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A281033540&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -132,7 +132,7 @@
                             <b>[C2]</b> F. Palomba, D. Di Nucci, M. Tufano, G. Bavota, R. Oliveto, D. Poshyvanyk, A. De Lucia.<br/>
                             Landfill: an Open Dataset of Code Smells with Public Evaluation.<br/>
                             In Proceedings of the IEEE/ACM 12th Working Conference on Mining Software Repositories (MSR 2015),
-                            Florence, Italy, 2015, 4 pages, 482-485. <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:9ZlFYXVOiuMC" target="blank">[pdf]</a>
+                            Florence, Italy, 2015, 4 pages, 482-485. <a href="https://www.researchgate.net/publication/277020549_Landfill_An_Open_Dataset_of_Code_Smells_with_Public_Evaluation?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A277020549&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                     <div class="row row-pubblication">
@@ -140,7 +140,7 @@
                             <b>[C1]</b> D. Di Nucci, A. Panichella, A. Zaidman, A. De Lucia.<br/>
                             Hypervolume-based Search for Test Case Prioritization.<br/>
                             In Proceedings of the Symposium on Search-Based Software Engineering (SSBSE 2015),
-                            Bergamo, Italy, 2015, 15 pages, 157-172. <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:ULOm3_A8WrAC" target="blank">[pdf]</a>
+                            Bergamo, Italy, 2015, 15 pages, 157-172. <a href="https://www.researchgate.net/publication/277714008_Hypervolume-Based_Search_for_Test_Case_Prioritization?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A277714008&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <p>
                             <b>[N1]</b> D. Di Nucci.<br/>
                             ICSE 2015 SIGSOFT CAPS Report.<br/>
-                            ACM SIGSOFT Software Engineering Notes - 2015, volume 40, 1 page, 22. <a href="https://scholar.google.it/citations?view_op=view_citation&hl=it&user=YJqcbnIAAAAJ&citation_for_view=YJqcbnIAAAAJ:4TOpqqG69KYC" target="blank">[pdf]</a>
+                            ACM SIGSOFT Software Engineering Notes - 2015, volume 40, 1 page, 22. <a href="https://www.researchgate.net/publication/282462786_ICSE_2015_SIGSOFT_CAPS_Report?_iepl%5BviewId%5D=KLsI0DPmKOA4HfPtAj11ANey&_iepl%5BprofilePublicationItemVariant%5D=default&_iepl%5Bcontexts%5D%5B0%5D=prfpi&_iepl%5BtargetEntityId%5D=PB%3A282462786&_iepl%5BinteractionType%5D=publicationTitle" target="blank">[pdf]</a>
                         </p>
                     </div>
                 </div>
