--- a/services.html
+++ b/services.html
@@ -67,17 +67,20 @@
                         </ul>
                     </div>
 
-		            <h3>Program committee member of International Conferences</h3>
+		   <h3>Program committee member of International Conferences</h3>
 
-	                <div class="row row-pubblication">
+                   <div class="row row-pubblication">
                         <ul>
+                            <li>
+	                        MaLTeSQuE 2018: Workshop on Machine Learning Techniques for Software Quality Evaluation - Campobasso, Italy
+                            </li>
                             <li>
 	                        VALID 2017: International Conference on Advances in System Testing and Validation Lifecycle - Athens, Greece
                             </li>
                         </ul>
                     </div>
 
-		            <h3>Reviewer for International Journals</h3>
+		    <h3>Reviewer for International Journals</h3>
 
                     <div class="row row-pubblication">
                         <ul>
@@ -104,13 +107,16 @@
                     <div class="row row-pubblication">
                         <ul>
                             <li>
+                                SANER 2018: IEEE International Conference on Software Analysis, Evolution, and Reengineering - Campobasso, Italy
+                            </li>
+                            <li>
                                 SANER 2017: IEEE International Conference on Software Analysis, Evolution, and Reengineering - Klagenfurt, Austria
                             </li>
                             <li>
                                 BIS 2017: International Conference on Business Information Systems - Poznan, Poland
                             </li>
                             <li>
-                                ICEIS 2016: International Conference on Enterprise Information Systems - Porto, Portugal
+                                ICEIS 2017: International Conference on Enterprise Information Systems - Porto, Portugal
                             </li>
                             <li>
                                 ICPC 2016: IEEE International Conference on Program Comprehension - Austin, TX, USA
