--- a/services.html
+++ b/services.html
@@ -63,19 +63,19 @@
                             </li>
                             <li>
                                 <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat
-	                    	</li>
+	                    </li>
                         </ul>
                     </div>
 
-		   <h3>Program committee member of International Conferences</h3>
+		   <h3>Program committee member of International Conferences or Workshops</h3>
 
                    <div class="row row-pubblication">
                         <ul>
                             <li>
-	                        MaLTeSQuE 2018: Workshop on Machine Learning Techniques for Software Quality Evaluation - Campobasso, Italy
+	                        International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017
                             </li>
                             <li>
-	                        VALID 2017: International Conference on Advances in System Testing and Validation Lifecycle - Athens, Greece
+	                        Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018
                             </li>
                         </ul>
                     </div>
@@ -107,40 +107,22 @@
                     <div class="row row-pubblication">
                         <ul>
                             <li>
-                                SANER 2018: IEEE International Conference on Software Analysis, Evolution, and Reengineering - Campobasso, Italy
+                                IEEE International Conference on Program Comprehension (ICPC): 2016
                             </li>
                             <li>
-                                SANER 2017: IEEE International Conference on Software Analysis, Evolution, and Reengineering - Klagenfurt, Austria
+                                IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2017, 2018
                             </li>
                             <li>
-                                BIS 2017: International Conference on Business Information Systems - Poznan, Poland
+                                IEEE International Conference on Software Maintenance and Evolution (ICSME) - ERA Track: 2016
                             </li>
                             <li>
-                                ICEIS 2017: International Conference on Enterprise Information Systems - Porto, Portugal
+                                International Conference on Business Information Systems (BIS):  2015, 2016, 2017
                             </li>
                             <li>
-                                ICPC 2016: IEEE International Conference on Program Comprehension - Austin, TX, USA
+                                International Conference on Distributed Multimedia Systems (DMS): 2015, 2016
                             </li>
                             <li>
-                                ICSME 2016: IEEE International Conference on Software Maintenance and Evolution (ERA Track) - Raleigh, NC, USA
-                            </li>
-                            <li>
-                                DMS 2016: International Conference on Distributed Multimedia Systems - Salerno, Italy
-                            </li>
-                            <li>
-                                BIS 2016: International Conference on Business Information Systems - Leipzig, Germany
-                            </li>
-                            <li>
-                                ICEIS 2016: International Conference on Enterprise Information Systems - Rome, Italy
-                            </li>
-                            <li>
-                                DMS 2015: International Conference on Distributed Multimedia Systems - Vancouver, Canada
-                            </li>
-                            <li>
-                                BIS 2015: International Conference on Business Information Systems - Poznan, Poland
-                            </li>
-                            <li>
-                                ICEIS 2015: International Conference on Enterprise Information Systems - Barcellona, Spain
+                                International Conference on Enterprise Information Systems (ICEIS): 2015, 2016, 2017
                             </li>
                         </ul>
                     </div>
@@ -149,7 +131,7 @@
 
                     <div class="row row-pubblication">
                         <ul>
-                            <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Bruxelles, Belgium. March 23rd 2017</li>
+                            <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Bruxelles, Belgium, March 23rd 2017</li>
                         </ul>
                     </div>
                             
