Teaching page: add space between tables

--- a/teaching.html
+++ b/teaching.html
@@ -55,146 +55,150 @@
         <div class="wrapper wrapperStyle">
             <article id="teaching">
                 <div class="container" style="margin-top: 2%; margin-bottom: 5%">
-                    <h3>Past (co)advised Bachelor and Master Students</h3>
-                    <table id="thesis" class="display" cellspacing="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th>Student</th>
-                                <th>Title</th>
-                                <th>Degree</th>
-                                <th>Date</th>
-                                <th>Advisor</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Giuseppe De Rosa</td>
-                                <td>A combined model for the prediction of defects</td>
-                                <td>MSc</td>
-                                <td>2015/09</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Simone Scalabrino</td>
-                                <td>Design and implementation of a tool for the automatic generation of test cases</td>
-                                <td>MSc</td>
-                                <td>2015/07</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Giovanni Grano</td>
-                                <td>Implementation and comparison of novel techniques for search based test data generation</td>
-                                <td>MSc</td>
-                                <td>2015/09</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Antonio Prota</td>
-                                <td>PETrA: a Power Estimation Tool for Android applications</td>
-                                <td>MSc</td>
-                                <td>2016/02</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Fabiano Pecorelli</td>
-                                <td>Design and implementation of a defect prediction tool</td>
-                                <td>BSc</td>
-                                <td>2016/09</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Elisa D'Eugenio</td>
-                                <td>CheckApp: a tool for monitoring Java application performance</td>
-                                <td>MSc</td>
-                                <td>2016/10</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Antonio Luca D'Avanzo</td>
-                                <td>TRIO: a Tool for Regression testIng Optimization</td>
-                                <td>BSc</td>
-                                <td>2016/12</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-			    <tr>
-                                <td>Pasquale Martiniello</td>
-                                <td>Design and implementation of a defect prediction tool by using cross-project techniques</td>
-                                <td>BSc</td>
-                                <td>2017/03</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Roberto Contaldo</td>
-                                <td>Design and implementation of a plugin for the detection of energy defects of mobile applications</td>
-                                <td>BSc</td>
-                                <td>2017/10</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Giuseppina Tufano</td>
-                                <td>Design and implementation of a defect prediction tool</td>
-                                <td>BSc</td>
-                                <td>2017/10</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                            <tr>
-                                <td>Sara Zaino</td>
-                                <td>Implementation of a software energy estimation methodology in an integrated development environment</td>
-                                <td>BSc</td>
-                                <td>2017/10</td>
-                                <td>Prof. Andrea De Lucia</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div style="margin-bottom: 5%">
+                        <h3>Past (co)advised Bachelor and Master Students</h3>
+                        <table id="thesis" class="display" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Student</th>
+                                    <th>Title</th>
+                                    <th>Degree</th>
+                                    <th>Date</th>
+                                    <th>Advisor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Giuseppe De Rosa</td>
+                                    <td>A combined model for the prediction of defects</td>
+                                    <td>MSc</td>
+                                    <td>2015/09</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Simone Scalabrino</td>
+                                    <td>Design and implementation of a tool for the automatic generation of test cases</td>
+                                    <td>MSc</td>
+                                    <td>2015/07</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Giovanni Grano</td>
+                                    <td>Implementation and comparison of novel techniques for search based test data generation</td>
+                                    <td>MSc</td>
+                                    <td>2015/09</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Antonio Prota</td>
+                                    <td>PETrA: a Power Estimation Tool for Android applications</td>
+                                    <td>MSc</td>
+                                    <td>2016/02</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Fabiano Pecorelli</td>
+                                    <td>Design and implementation of a defect prediction tool</td>
+                                    <td>BSc</td>
+                                    <td>2016/09</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Elisa D'Eugenio</td>
+                                    <td>CheckApp: a tool for monitoring Java application performance</td>
+                                    <td>MSc</td>
+                                    <td>2016/10</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Antonio Luca D'Avanzo</td>
+                                    <td>TRIO: a Tool for Regression testIng Optimization</td>
+                                    <td>BSc</td>
+                                    <td>2016/12</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Pasquale Martiniello</td>
+                                    <td>Design and implementation of a defect prediction tool by using cross-project techniques</td>
+                                    <td>BSc</td>
+                                    <td>2017/03</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Roberto Contaldo</td>
+                                    <td>Design and implementation of a plugin for the detection of energy defects of mobile applications</td>
+                                    <td>BSc</td>
+                                    <td>2017/10</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Giuseppina Tufano</td>
+                                    <td>Design and implementation of a defect prediction tool</td>
+                                    <td>BSc</td>
+                                    <td>2017/10</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                                <tr>
+                                    <td>Sara Zaino</td>
+                                    <td>Implementation of a software energy estimation methodology in an integrated development environment</td>
+                                    <td>BSc</td>
+                                    <td>2017/10</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
                     <h3>Teaching Assistant</h3>
-                    <table id="courses" class="display" cellspacing="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th>Course</th>
-                                <th>Degree</th>
-                                <th>Professor</th>
-                                <th>Period</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Programming I</td>
-                                <td>BSc</td>
-                                <td>Prof. Riccardo Distasi<br/> </td>
-                                <td>2016/17 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Programming I</td>
-                                <td>BSc</td>
-                                <td>Prof. Enrico Fischetti<br/> </td>
-                                <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering, Management and Evolution</td>
-                                <td>MSc</td>
-                                <td>Prof. Andrea De Lucia</td>
-                                <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering: Maintenance and Testing</td>
-                                <td>MSc</td>
-                                <td>Prof. Andrea De Lucia</td>
-                                <td>2015/16 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Software Engineering</td>
-                                <td>BSc</td>
-                                <td>Prof. Andrea De Lucia</td>
-                                <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
-                            </tr>
-                            <tr>
-                                <td>Web Development</td>
-                                <td>BSc</td>
-                                <td>-</td>
-                                <td>2016/17 (Fall Semester)</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                        <table id="courses" class="display" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Course</th>
+                                    <th>Degree</th>
+                                    <th>Professor</th>
+                                    <th>Period</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Programming I</td>
+                                    <td>BSc</td>
+                                    <td>Prof. Riccardo Distasi<br/> </td>
+                                    <td>2016/17 (Fall Semester)</td>
+                                </tr>
+                                <tr>
+                                    <td>Programming I</td>
+                                    <td>BSc</td>
+                                    <td>Prof. Enrico Fischetti<br/> </td>
+                                    <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering, Management and Evolution</td>
+                                    <td>MSc</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                    <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering: Maintenance and Testing</td>
+                                    <td>MSc</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                    <td>2015/16 (Fall Semester)</td>
+                                </tr>
+                                <tr>
+                                    <td>Software Engineering</td>
+                                    <td>BSc</td>
+                                    <td>Prof. Andrea De Lucia</td>
+                                    <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
+                                </tr>
+                                <tr>
+                                    <td>Web Development</td>
+                                    <td>BSc</td>
+                                    <td>-</td>
+                                    <td>2016/17 (Fall Semester)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </article>
         </div>
