--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
                     <div class="row">
                       <div class="4u">
                             <section class="box">
-                                <h3>Bug prediction</h3>
+                                <h3>Bug Prediction</h3>
                                 <p style="text-align: justify">
                                     Allocating resources for the testing and the verification of all the parts of a large software system is a cost-prohibitive task. To alleviate this issue, prediction models able to identify portions of source code more prone to contain bugs have been the object of several studies.<br/>
                                     The main research topic is the definition of accurate prediction models that, on the one hand use a suitable set of predictors able to characterize the bug-proneness of code components, and on the other hand are able to use appropriate machine learning techniques to distinguish those components affected by bug.
