--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
                         </ul>
                     </div>
 
-		   <h3>Program committee member of International Conferences or Workshops</h3>
+		   <h3>Program Committee Member of International Conferences or Workshops</h3>
 
                    <div class="row row-pubblication">
                         <ul>
