--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
             <article id="services">
                 <div class="container" style="margin-top: 2%">
 
-		    <h3>Organizing committee of SE events</h3>
+		    <h3>Organizing Committee Member of SE events</h3>
 
                     <div class="row row-pubblication">
                         <ul>
@@ -67,7 +67,7 @@
                         </ul>
                     </div>
 
-		   <h3>Program Committee Member of International Conferences or Workshops</h3>
+		   <h3>Program Committee Member of International Conferences and Workshops</h3>
 
                    <div class="row row-pubblication">
                         <ul>
