--- a/services.html
+++ b/services.html
@@ -58,12 +58,8 @@
 
                     <div class="row row-pubblication">
                         <ul>
-                            <li>
-		                <a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat
-                            </li>
-                            <li>
-                                <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat
-	                    </li>
+                            <li><a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
+                            <li><a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat</li>
                         </ul>
                     </div>
 
@@ -89,6 +85,15 @@
                             </li>
                             <li>
                                 Arabian Journal for Science and Engineering - Springer
+                            </li>
+                            <li>
+                                Arabian Journal for Science and Engineering - Springer
+                            </li>
+                            <li>
+                                Empirical Software Engineering - Springer
+                            </li>
+                            <li>
+                                Information Processing Letters - Elsevier
                             </li>
                             <li>
                                 Journal of King Saud University: Computer and Information Sciences - Elsevier
@@ -131,7 +136,8 @@
 
                     <div class="row row-pubblication">
                         <ul>
-                            <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Bruxelles, Belgium, March 23rd 2017</li>
+                            <li>Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels, Belgium, March 23rd 2017</li>
+                            <li>Machine Learning and Deep Learning in Practice. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th 2017</li>
                         </ul>
                     </div>
                             
